# data-ops-hub

./: .gitignore
authentication/auth0-restapi-samples/: README.md  go.sum
authentication/auth0-restapi-samples/basics/: basic_auth.go
authentication/auth0-restapi-samples/config/: config.go  config.yaml
automation/: install_golang.sh
automation/starter-kit/cross-plane/: cleanup-crossplane-gcp.sh  validation-commands.sh
automation/starter-kit/cross-plane/config-yamls/: 00-provider.yaml  01-gcp-secret.yaml  20-subnetwork.yaml  30-firewall-ssh-http.yaml
automation/starter-kit/cross-plane/manual-onboarding/: README.md  helm-cross-plane-install.sh
automation/starter-kit/cross-plane/program-onboarding/: config.json  go.mod  go.sum  main.go
data-com/authentication/auth0-restapi-samples/: go.mod
data-com/authentication/auth0-restapi-samples/auth/: auth.go
data-com/authentication/auth0-restapi-samples/cmd/: main.go
data-com/experimental_bazel/: README.md
data-com/experimental_bazel/twomod/gazelle-work/: MODULE.bazel
data-com/experimental_bazel/twomod/gazelle-work/package1/: BUILD.bazel
data-com/experimental_bazel/twomod/gazelle-work/package2/: go.mod
data-com/sql/: schema.v4.sql
data-pipeline/: README.md
data-pipeline/go-worflow-samples/simple/: README.md  go.mod  go.sum
data-pipeline/go-worflow-samples/temporal-ip-geolocation/: README.md  activities.go  go.mod  go.sum  shared.go  workflows.go
experimental_bazel/twomod/gazelle-work/: README.md
sql/: README.md  graph-scehma-v4.sql
utils/: kube-installation.sh
(+38 files in other folders)
