module(
    name = "twomod",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.46.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.25.5",
)

use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")


